Simplify module-info